Initial OSS release

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-.vscode
-paket.exe
-packages
-docs-generated
-temp
+# Paket
+packages/
+paket-files/
+.paket/
+!.paket/paket.bootstrapper.exe
 
-TestResults.xml
+# Gitbook
+docs/node_modules/
+docs-generated/
+temp/
+
+# GIT
+.git-credentials
