--- a/Unic.Bob.Bristle.nuspec
+++ b/Unic.Bob.Bristle.nuspec
@@ -1,16 +1,17 @@
 <?xml version="1.0"?>
-  <package >
-    <metadata>
-      <id>Unic.Bob.Bristle</id>
-      <authors>Unic AG</authors>
-      <version>$VERSION$</version>
-      <owners>Unic AG</owners>
-      <iconUrl>https://www.unic.com/img/unic-logo.png</iconUrl>
-      <requireLicenseAcceptance>false</requireLicenseAcceptance>
-      <description>Bristle finishes releases or hotfixes.</description>
-    </metadata>
-    <files>
-        <file src="src\**" />
-        <file src="packages\**" target="tools" exclude="**\package\services\metadata\core-properties\**;**\Unic.Bob.Keith\**;**\pester\**" />
-    </files>
-  </package>
+<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+  <metadata>
+    <id>Unic.Bob.Bristle</id>
+    <authors>Unic AG</authors>
+    <version>$VERSION$</version>
+    <owners>Unic AG</owners>
+    <iconUrl>https://github.com/unic/unic/raw/master/unic_nuget.png</iconUrl>
+    <projectUrl>https://github.com/unic/bob-lofty</projectUrl>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>Bristle finishes releases or hotfixes.</description>
+  </metadata>
+  <files>
+      <file src="src\**" />
+      <file src="packages\**" target="tools" exclude="**\package\services\metadata\core-properties\**;**[Content_Types].xml;**\_rels\**;**\Unic.Bob.Keith\**;**\pester\**" />
+  </files>
+</package>
